[package]
name = "vcd"
version = "0.7.0"
authors = ["Kevin Mehall <km@kevinmehall.net>"]
description = "Read and write VCD (Value Change Dump) files"
license = "MIT"
keywords = ["vcd", "verilog", "eda"]
repository = "https://github.com/kevinmehall/rust-vcd"
categories = ["parser-implementations", "encoding"]
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "^1.0", optional = true, features = ["derive"] }
